Update game files

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/mdz-project.loader.js";
       var config = {
-        dataUrl: buildUrl + "/mdz-project.data.br",
-        frameworkUrl: buildUrl + "/mdz-project.framework.js.br",
-        codeUrl: buildUrl + "/mdz-project.wasm.br",
+        dataUrl: buildUrl + "/mdz-project.data",
+        frameworkUrl: buildUrl + "/mdz-project.framework.js",
+        codeUrl: buildUrl + "/mdz-project.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MDZ-project",
