--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/mdz-projectv2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/mdz-projectv2.data.br",
-        frameworkUrl: buildUrl + "/mdz-projectv2.framework.js.br",
-        codeUrl: buildUrl + "/mdz-projectv2.wasm.br",
+        dataUrl: buildUrl + "/mdz-projectv2.data",
+        frameworkUrl: buildUrl + "/mdz-projectv2.framework.js",
+        codeUrl: buildUrl + "/mdz-projectv2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MDZ-project",
